src/p86asm.output
Terminals unused in grammar

   REG


State 19 conflicts: 1 shift/reduce


Grammar

    0 $accept: statements $end

    1 statements: /* empty */
    2           | statements statement

    3 statement: endline
    4          | program_expr

    5 program_expr: code
    6             | label
    7             | directive
    8             | comment

    9 comment: CMTSTR

   10 directive: directive_key DIRECTIVE immediate_type

   11 directive_key: /* empty */
   12              | TEXT

   13 code: OPCODE modifier params

   14 modifier: /* empty */
   15         | WORDPTR
   16         | BYTEPTR

   17 params: /* empty */
   18       | param COMMA param
   19       | param

   20 param: operand
   21      | LSQBR operand RSQBR

   22 operand: reg_and_lookup_type
   23        | immediate_type

   24 reg_and_lookup_type: TEXT

   25 immediate_type: hex_type
   26               | binary_type
   27               | decimal_type
   28               | LITERAL

   29 binary_type: BIN_PRE
   30            | BIN_SUFF

   31 hex_type: HEX_PRE
   32         | HEX_SUFF

   33 decimal_type: DEC

   34 label: LABEL COLON

   35 endline: END TEXT


Terminals, with rules where they appear

$end (0) 0
error (256)
COLON (258) 34
END (259) 35
COMMA (260) 18
WORDPTR (261) 15
BYTEPTR (262) 16
LSQBR (263) 21
RSQBR (264) 21
OPCODE (265) 13
REG (266)
HEX_PRE (267) 31
HEX_SUFF (268) 32
DEC (269) 33
BIN_PRE (270) 29
BIN_SUFF (271) 30
CMTSTR (272) 9
LABEL (273) 34
LITERAL (274) 28
TEXT (275) 12 24 35
DIRECTIVE (276) 10


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
statements (23)
    on left: 1 2, on right: 0 2
statement (24)
    on left: 3 4, on right: 2
program_expr (25)
    on left: 5 6 7 8, on right: 4
comment (26)
    on left: 9, on right: 8
directive (27)
    on left: 10, on right: 7
directive_key (28)
    on left: 11 12, on right: 10
code (29)
    on left: 13, on right: 5
modifier (30)
    on left: 14 15 16, on right: 13
params (31)
    on left: 17 18 19, on right: 13
param (32)
    on left: 20 21, on right: 18 19
operand (33)
    on left: 22 23, on right: 20 21
reg_and_lookup_type (34)
    on left: 24, on right: 22
immediate_type (35)
    on left: 25 26 27 28, on right: 10 23
binary_type (36)
    on left: 29 30, on right: 26
hex_type (37)
    on left: 31 32, on right: 25
decimal_type (38)
    on left: 33, on right: 27
label (39)
    on left: 34, on right: 6
endline (40)
    on left: 35, on right: 3


state 0

    0 $accept: . statements $end

    $default  reduce using rule 1 (statements)

    statements  go to state 1


state 1

    0 $accept: statements . $end
    2 statements: statements . statement

    $end    shift, and go to state 2
    END     shift, and go to state 3
    OPCODE  shift, and go to state 4
    CMTSTR  shift, and go to state 5
    LABEL   shift, and go to state 6
    TEXT    shift, and go to state 7

    $default  reduce using rule 11 (directive_key)

    statement      go to state 8
    program_expr   go to state 9
    comment        go to state 10
    directive      go to state 11
    directive_key  go to state 12
    code           go to state 13
    label          go to state 14
    endline        go to state 15


state 2

    0 $accept: statements $end .

    $default  accept


state 3

   35 endline: END . TEXT

    TEXT  shift, and go to state 16


state 4

   13 code: OPCODE . modifier params

    WORDPTR  shift, and go to state 17
    BYTEPTR  shift, and go to state 18

    $default  reduce using rule 14 (modifier)

    modifier  go to state 19


state 5

    9 comment: CMTSTR .

    $default  reduce using rule 9 (comment)


state 6

   34 label: LABEL . COLON

    COLON  shift, and go to state 20


state 7

   12 directive_key: TEXT .

    $default  reduce using rule 12 (directive_key)


state 8

    2 statements: statements statement .

    $default  reduce using rule 2 (statements)


state 9

    4 statement: program_expr .

    $default  reduce using rule 4 (statement)


state 10

    8 program_expr: comment .

    $default  reduce using rule 8 (program_expr)


state 11

    7 program_expr: directive .

    $default  reduce using rule 7 (program_expr)


state 12

   10 directive: directive_key . DIRECTIVE immediate_type

    DIRECTIVE  shift, and go to state 21


state 13

    5 program_expr: code .

    $default  reduce using rule 5 (program_expr)


state 14

    6 program_expr: label .

    $default  reduce using rule 6 (program_expr)


state 15

    3 statement: endline .

    $default  reduce using rule 3 (statement)


state 16

   35 endline: END TEXT .

    $default  reduce using rule 35 (endline)


state 17

   15 modifier: WORDPTR .

    $default  reduce using rule 15 (modifier)


state 18

   16 modifier: BYTEPTR .

    $default  reduce using rule 16 (modifier)


state 19

   13 code: OPCODE modifier . params

    LSQBR     shift, and go to state 22
    HEX_PRE   shift, and go to state 23
    HEX_SUFF  shift, and go to state 24
    DEC       shift, and go to state 25
    BIN_PRE   shift, and go to state 26
    BIN_SUFF  shift, and go to state 27
    LITERAL   shift, and go to state 28
    TEXT      shift, and go to state 29

    TEXT      [reduce using rule 17 (params)]
    $default  reduce using rule 17 (params)

    params               go to state 30
    param                go to state 31
    operand              go to state 32
    reg_and_lookup_type  go to state 33
    immediate_type       go to state 34
    binary_type          go to state 35
    hex_type             go to state 36
    decimal_type         go to state 37


state 20

   34 label: LABEL COLON .

    $default  reduce using rule 34 (label)


state 21

   10 directive: directive_key DIRECTIVE . immediate_type

    HEX_PRE   shift, and go to state 23
    HEX_SUFF  shift, and go to state 24
    DEC       shift, and go to state 25
    BIN_PRE   shift, and go to state 26
    BIN_SUFF  shift, and go to state 27
    LITERAL   shift, and go to state 28

    immediate_type  go to state 38
    binary_type     go to state 35
    hex_type        go to state 36
    decimal_type    go to state 37


state 22

   21 param: LSQBR . operand RSQBR

    HEX_PRE   shift, and go to state 23
    HEX_SUFF  shift, and go to state 24
    DEC       shift, and go to state 25
    BIN_PRE   shift, and go to state 26
    BIN_SUFF  shift, and go to state 27
    LITERAL   shift, and go to state 28
    TEXT      shift, and go to state 29

    operand              go to state 39
    reg_and_lookup_type  go to state 33
    immediate_type       go to state 34
    binary_type          go to state 35
    hex_type             go to state 36
    decimal_type         go to state 37


state 23

   31 hex_type: HEX_PRE .

    $default  reduce using rule 31 (hex_type)


state 24

   32 hex_type: HEX_SUFF .

    $default  reduce using rule 32 (hex_type)


state 25

   33 decimal_type: DEC .

    $default  reduce using rule 33 (decimal_type)


state 26

   29 binary_type: BIN_PRE .

    $default  reduce using rule 29 (binary_type)


state 27

   30 binary_type: BIN_SUFF .

    $default  reduce using rule 30 (binary_type)


state 28

   28 immediate_type: LITERAL .

    $default  reduce using rule 28 (immediate_type)


state 29

   24 reg_and_lookup_type: TEXT .

    $default  reduce using rule 24 (reg_and_lookup_type)


state 30

   13 code: OPCODE modifier params .

    $default  reduce using rule 13 (code)


state 31

   18 params: param . COMMA param
   19       | param .

    COMMA  shift, and go to state 40

    $default  reduce using rule 19 (params)


state 32

   20 param: operand .

    $default  reduce using rule 20 (param)


state 33

   22 operand: reg_and_lookup_type .

    $default  reduce using rule 22 (operand)


state 34

   23 operand: immediate_type .

    $default  reduce using rule 23 (operand)


state 35

   26 immediate_type: binary_type .

    $default  reduce using rule 26 (immediate_type)


state 36

   25 immediate_type: hex_type .

    $default  reduce using rule 25 (immediate_type)


state 37

   27 immediate_type: decimal_type .

    $default  reduce using rule 27 (immediate_type)


state 38

   10 directive: directive_key DIRECTIVE immediate_type .

    $default  reduce using rule 10 (directive)


state 39

   21 param: LSQBR operand . RSQBR

    RSQBR  shift, and go to state 41


state 40

   18 params: param COMMA . param

    LSQBR     shift, and go to state 22
    HEX_PRE   shift, and go to state 23
    HEX_SUFF  shift, and go to state 24
    DEC       shift, and go to state 25
    BIN_PRE   shift, and go to state 26
    BIN_SUFF  shift, and go to state 27
    LITERAL   shift, and go to state 28
    TEXT      shift, and go to state 29

    param                go to state 42
    operand              go to state 32
    reg_and_lookup_type  go to state 33
    immediate_type       go to state 34
    binary_type          go to state 35
    hex_type             go to state 36
    decimal_type         go to state 37


state 41

   21 param: LSQBR operand RSQBR .

    $default  reduce using rule 21 (param)


state 42

   18 params: param COMMA param .

    $default  reduce using rule 18 (params)
